<resources>
    <string name="app_name">Bari Bhara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_">
Welcome to the \nHouse Booking!
</string>
    <string name="welcome_to_the">Welcome to the</string>
    <string name="bari_bhara">Bari Bhara!</string>
    <string name="get_started">Get started</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="home">Home</string>
    <string name="what_do_you">What do you</string>
    <string name="stays">Stays</string>
    <string name="search">Search</string>
    <string name="related_to">related to?</string>
    <string name="the_palace_luxury">The Palace Luxury</string>
    <string name="_20000_tk">20000 Tk</string>
    <string name="trending_places">Trending Places</string>
    <string name="you_have_no_message">You Have No Messages</string>
    <string name="you_have_no_wishlist_right_now">You Have No Wishlist Right Now</string>


</resources>