<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/white"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_48ssp"
        android:text="@string/what_do_you"
        android:textColor="#A4A0A0"
        android:textSize="@dimen/_24ssp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_80ssp"
        android:text="@string/related_to"
        android:textStyle="bold"
        android:textColor="#FA7363"
        android:textSize="@dimen/_24ssp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="@dimen/_16ssp"
        android:backgroundTint="#E9F3FF"
        android:hint="@string/search"
        app:layout_constraintTop_toBottomOf="@id/home_title2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trendItemRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_20ssp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        tools:listitem="@layout/trending_item_layout" />
    <TextView
        android:id="@+id/home_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_190sdp"
        android:text="Trending Places"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/trendItemRecycler" />







</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>